--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Screen for Sunday School</title>
+  <meta charset="UTF-8">
+  <title>Welcome Screen</title>
+  <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
+<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
 
-<h1 style="text-align: center;">Browser Welcome Screen by Sunday School</h1>
+<div class="background">
+ <div class="container">
+  <div class="row flex-column justify-content-center align-items-center text-center">
+   <div class="col-sm-12 col-md-10 col-lg-8">
+    <h1 id="time">12:00 AM</h1>
+    <h3 id="day" class="display-5">Monday, January 01</h3>
+    <h2 id="greeting">Good Morning, User.</h2>
+    <h3>What would you like to inquire about today?</h3>
+   </div>
+   
+  </div>
+	 <div class="row justify-content-center">
+	 	<div class="col-sm-12 col-md-10 col-lg-6">
+	 		<form action="https://www.google.com/search" method="get">
+			  <div class="form-group">
+				<div class="input-group">
+				 <input type="text" name="q" class="form-control custom-input">
+				 <span class="input-group-btn">
+					<button class="btn btn-custom" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+				 </span>
+				</div>
+			  </div>
+			 </form>
+	 	</div>
+	 </div>
+ </div>
+</div>
+
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js'></script>
+<script  src="./script.js"></script>
 
 </body>
 </html>
