--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Dashboard UI </title>
+  <title>Welcome by Dinesh Kumar </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<main class="main">
+<main class="main" style="padding-top: 0;">
 	<div class="responsive-wrapper">
-		<div class="main-header">
-			<h1>Settings</h1>
-		</div>
 		<div class="horizontal-tabs">
 			<a href="#">My details</a>
 			<a href="#">Profile</a>
@@ -25,7 +22,7 @@
 			<a href="#" class="active">Integrations</a>
 			<a href="#">API</a>
 		</div>
-		<div class="content-header">
+		<!-- <div class="content-header">
 			<div class="content-header-intro">
 				<h2>Intergrations and connected apps</h2>
 				<p>Supercharge your workflow and connect the tool you use every day.</p>
@@ -40,7 +37,7 @@
 					<span>Request integration</span>
 				</a>
 			</div>
-		</div>
+		</div> -->
 		<div class="content">
 			<div class="content-main">
 				<div class="card-grid">
