new screen added

--- a/index.html
+++ b/index.html
@@ -2,268 +2,155 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Welcome by Dinesh Kumar </title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css">
+  <title>CodePen - Steamboat Willie Clock</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<main class="main" style="padding-top: 0;">
-	<div class="responsive-wrapper">
-		<div class="horizontal-tabs">
-			<a href="#">My details</a>
-			<a href="#">Profile</a>
-			<a href="#">Password</a>
-			<a href="#">Team</a>
-			<a href="#">Plan</a>
-			<a href="#">Billing</a>
-			<a href="#">Email</a>
-			<a href="#">Notifications</a>
-			<a href="#" class="active">Integrations</a>
-			<a href="#">API</a>
-		</div>
-		<!-- <div class="content-header">
-			<div class="content-header-intro">
-				<h2>Intergrations and connected apps</h2>
-				<p>Supercharge your workflow and connect the tool you use every day.</p>
-			</div>
-			<div class="content-header-actions">
-				<a href="#" class="button">
-					<i class="ph-faders-bold"></i>
-					<span>Filters</span>
-				</a>
-				<a href="#" class="button">
-					<i class="ph-plus-bold"></i>
-					<span>Request integration</span>
-				</a>
-			</div>
-		</div> -->
-		<div class="content">
-			<div class="content-main">
-				<div class="card-grid">
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/zeplin.svg" /></span>
-								<h3>Zeplin</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox" checked>
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Collaboration between designers and developers.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/github.svg" /></span>
-								<h3>GitHub</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox" checked>
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Link pull requests and automate workflows.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/figma.svg" /></span>
-								<h3>Figma</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox" checked>
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Embed file previews in projects.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/zapier.svg" /></span>
-								<h3>Zapier</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox">
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Build custom automations and integrations with apps.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/notion.svg" /></span>
-								<h3>Notion</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox" checked>
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Embed notion pages and notes in projects.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/slack.svg" /></span>
-								<h3>Slack</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox" checked>
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Send notifications to channels and create projects.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/zendesk.svg" /></span>
-								<h3>Zendesk</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox" checked>
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Link and automate Zendesk tickets.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/jira.svg" /></span>
-								<h3>Atlassian JIRA</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox">
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Plan, track, and release great software.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/dropbox.svg" /></span>
-								<h3>Dropbox</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox" checked>
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Everything you need for work, all in one place.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/google-chrome.svg" /></span>
-								<h3>Google Chrome</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox" checked>
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Link your Google account to share bookmarks across your entire team.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/discord.svg" /></span>
-								<h3>Discord</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox" checked>
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Keep in touch with your customers without leaving the app.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-					<article class="card">
-						<div class="card-header">
-							<div>
-								<span><img src="https://assets.codepen.io/285131/google-drive.svg" /></span>
-								<h3>Google Drive</h3>
-							</div>
-							<label class="toggle">
-								<input type="checkbox">
-								<span></span>
-							</label>
-						</div>
-						<div class="card-body">
-							<p>Link your Google account to share files across your entire team.</p>
-						</div>
-						<div class="card-footer">
-							<a href="#">View integration</a>
-						</div>
-					</article>
-				</div>
-			</div>
-		</div>
-	</div>
-</main>
+<!-- partial:index.partial.html -->
+<svg viewBox="0 0 400 400">
+	<defs>
+		<radialGradient id="grad">
+			<stop offset="0%" stop-color="rgba(127, 189, 255, .125)" />
+			<stop offset="90%" stop-color="rgba(127, 189, 255, 0.25)" />
+			<stop offset="100%" stop-color="rgba(127, 189, 255, 0.75)" />
+		</radialGradient>
+		<filter id="blur" x="-100%" y="-100%" width="300%" height="300%">
+			<feGaussianBlur in="SourceGraphic" stdDeviation="2.5" />
+		</filter>
+	</defs>
+	<g transform="translate(-300 -300)">
+		<circle cx="500" cy="500" r="198" fill="#fff" stroke="#000" stroke-width="2" />
+		<circle cx="500" cy="500" r="200" fill="url(#grad)" />
+		<g class="seconds">
+			<circle cx="500" cy="500" r="190" fill="none" stroke="rgb(63, 95, 127)" stroke-width="8" />
+			<circle cx="500" cy="500" r="190" fill="none" stroke="rgb(127, 189, 255)" stroke-dasharray="1173.90825" stroke-width="5" transform="rotate(-87 500 500)">
+				<animateTransform id="minuteRotate" attributeName="transform" attributeType="XML" type="rotate" values="0 500 500; 360 500 500" dur="60s" begin="0s" repeatCount="indefinite" />
+			</circle>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle">12</text>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(30 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-30 0 0)">1</text>
+				</g>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(60 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-60 0 0)">2</text>
+				</g>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(90 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-90 0 0)">3</text>
+				</g>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(120 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-120 0 0)">4</text>
+				</g>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(150 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-150 0 0)">5</text>
+				</g>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(180 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-180 0 0)">6</text>
+				</g>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(210 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-210 0 0)">7</text>
+				</g>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(240 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-240 0 0)">8</text>
+				</g>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(270 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-270 0 0)">9</text>
+				</g>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(300 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-300 0 0)">10</text>
+				</g>
+			</g>
+		</g>
+		<g transform="translate(500 500)" x="500" y="250">
+			<g transform="translate(0 -144)">
+				<g transform="rotate(330 0 144)">
+					<text font-family="monospace" font-size="50" text-anchor="middle" dominant-baseline="middle" transform="rotate(-330 0 0)">11</text>
+				</g>
+			</g>
+		</g>
+		<use href="#steamboatWillie" filter="url(#blur) brightness(0%) invert(100%)" />
+		<g id="steamboatWillie">
+			<path class="rightLeg" d="M 493 598 C 489 602 487 606 493 606 Q 504 606 511 598 L 528 563 L 512 569 Q 503 586 493 598" fill="#111" stroke="#000" stroke-width="2" stroke-linejoin="round" />
+			<path class="leftLeg" d="M 452 599 C 460 601 463 609 463 609 L 486 574 L 476 569 Z" fill="#111" stroke="#000" stroke-width="2" stroke-linejoin="round" />
+			<path class="rightShoe" d="M 482 610 C 473 618 475 626 489 632 Q 504 637 535 631 C 558 625 556 601 535 598 Q 517 596 501 614 C 502 610 515 602 514 600 C 513 598 512 597 511 598 Q 504 606 493 606 C 487 606 489 602 493 598 C 484 598 472 610 490 612" fill="gold" stroke="#000" stroke-width="2" stroke-linejoin="round" />
+			<path class="leftShoe" d="M 460 617 C 467 627 464 632 460 635 C 452 640 434 638 424 628 C 401 605 400 595 405 583 C 409 574 419 570 426 572 C 432 574 442 573 454 608 Q 454 604 452 599 C 461 601 468 614 460 617 M 404 601 C 400 584 421 584 427 594 Q 442 620 455 628 C 460 631 459 636 454 637 M 423 627 Q 439 626 442 624" fill="gold" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<path class="torso" d="M 481 515 C 485 512 485 501 479 494 C 488 494 499 485 499 484 C 511 491 523 490 525 494 C 534 515 489 515 481 515" fill="#111" />
+			<path class="pants" d="M 483 515 C 475 515 460 536 471 553 L 473 550 Q 469 556 465 559 Q 480 577 503 577 Q 502 565 504 560 Q 502 567 503 569 Q 518 572 541 554 Q 539 550 538 545 Q 536 548 533 551 C 548 536 550 502 525 494 C 534 515 489 515 483 515 M 465 559 C 459 562 469 569 474 572 L 476 569 M 503 566 Q 512 565 517 561" fill="blue" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<path class="leftButton" d="M 515 543 C 524 543 522 523 515 523 C 508 523 506 543 515 543" fill="gold" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<path class="rightButton" d="M 534 532 C 541 532 541 512 534 512 C 529 512 528 532 534 532" fill="gold" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<path class="headBlack" d="M 466 483 C 438 474 452 427 489 456 C 466 416 499 395 514 426 C 514 420 514 418 518 422 C 513 415 504 404 477 406 C 498 384 477 357 451 368 C 420 383 438 415 458 413 Q 447 423 442 435 C 431 410 395 419 397 450 C 399 481 439 478 442 454 C 448 483 466 483 466 483" fill="#111" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<path class="headWhite" d="M 479 494 C 488 494 499 485 499 484 C 528 487 540 473 541 468 C 543 457 539 449 530 450 C 521 451 517 457 517 457 C 517 457 521 451 530 450 Q 529 450 526 451 Q 526 432 518 422 C 514 418 514 420 514 426 C 499 395 466 416 489 456 C 452 427 438 474 466 483 C 469 491 475 494 479 494" fill="#fff" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<path class="nose" d="M 535 453 C 528 465 541 464 542 463 C 551 457 552 446 547 444 C 539 441 538 448 535 453" fill="#111" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<path class="leftEye" d="M 507 458 Q 508 454 515 455 Q 513 454 512 454 C 515 448 513 432 509 432 C 503 432 505 452 508 455 Q 507 457 507 458" fill="#111" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<path class="rightEye" d="M 517 457 L 519 455 C 518 453 516 433 520 433 C 523 433 524 445 523 452 Q 521 453 519 455" fill="#111" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<path class="mouth" d="M 495 481 C 465 505 469 463 470 458 Q 467 459 464 461 Q 470 455 479 459 Q 473 457 470 458 C 479 478 490 481 495 481" fill="#111" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<path class="tongue" d="M 488 485 C 487 482 482 476 481 482 C 481 479 476 472 471 475 C 473 494 486 486 488 485" fill="red" stroke="#000" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
+			<use href="#hour" filter="url(#blur) brightness(0%) opacity(90%)" />
+		</g>
+		<g class="watchArms">
+			<g id="hour">
+				<g class="hour">
+					<path class="hourHand" d="M 500 500 Q 539 487 555 466" fill="none" stroke="#111" stroke-width="11" stroke-linecap="round" />
+					<path class="hourHandGlove" d="M 553 448 C 538 454 563 485 572 471 C 588 473 591 464 592 461 C 591 464 588 473 572 471 C 561 468 553 457 553 448 C 553 433 564 427 572 428 L 594 411 C 602 405 609 414 603 421 L 584 437 C 592 430 602 439 592 447 L 587 451 C 598 438 604 453 599 457 C 587 465 584 459 587 451 C 586 447 581 424 565 436 C 581 424 586 447 587 451 C 583 464 576 457 574 454 Q 571 448 572 445 Q 571 448 574 454 Q 573 457 569 459 Q 573 457 574 454 C 576 457 583 464 587 451 C 584 459 587 462 592 461 C 591 464 588 473 572 471 C 561 468 553 457 553 448" fill="#fff" stroke="#111" stroke-width="2" stroke-linecap="round" />
+				</g>
+				<animateTransform id="hourRotate" attributeName="transform" attributeType="XML" type="rotate" values="-50 500 500; 410 500 500" dur="43200s" begin="0s" repeatCount="indefinite" />
+
+			</g>
+			<use href="#minute" filter="url(#blur) brightness(0%) opacity(80%)" />
+			<g id="minute">
+				<g class="minute">
+					<path class="minuteHand" d="M 500 500 Q 444 498 414 509" fill="none" stroke="#111" stroke-width="12" stroke-linecap="round" />
+					<path class="minuteHandGlove" d="M 408 524 C 421 520 412 491 401 500 C 405 503 410 509 408 524 C 407 529 400 539 388 543 L 381 543 C 376 546 363 549 352 548 C 346 547 346 546 345 544 C 343 541 345 537 349 534 C 352 532 359 531 371 531 C 363 525 364 519 368 521 C 353 511 366 493 378 493 C 382 493 382 498 379 498 C 375 498 373 501 372 503 C 387 490 398 498 401 500 C 405 503 410 509 408 524 M 391 529 Q 396 527 400 524 M 386 522 Q 394 520 399 516 M 386 512 Q 390 510 396 510" fill="#fff" stroke="#111" stroke-width="2" stroke-linecap="round" />
+				</g>
+				<animateTransform id="minuteRotate" attributeName="transform" attributeType="XML" type="rotate" values="105 500 500; 465 500 500" dur="3600s" begin="0s" repeatCount="indefinite" />
+			</g>
+		</g>
+	</g>
+</svg>
 <!-- partial -->
-  <script src='https://unpkg.com/phosphor-icons'></script><script  src="./script.js"></script>
+  <script  src="./script.js"></script>
 
 </body>
 </html>
